@@ -65,11 +65,9 @@ namespace MonoDevelop.CSharpBinding.Tests
 			get { return viewContent; }
 			set { viewContent = value; }
 		}
-		
-		public ArrayList SubViewContents {
-			get { return new ArrayList (); }
-		}
-		
+
+		public IEnumerable<IAttachableViewContent> SubViewContents { get { return new IAttachableViewContent[0]; } }
+
 		public IBaseViewContent ActiveViewContent {
 			get { return ViewContent;}
 			set {}
