@@ -1,3 +1,8 @@
+2010-06-30  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.CSharpBinding/TestWorkbenchWindow.cs: Track API
+	  changes.
+
 2010-06-29  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.CSharpBinding/TestSpacingVisitor.cs: Added tests
